<resources>
    <string name="app_name">crudFromJson</string>
    <string name="heroDisplay_seeDetails">Ver detalles</string>
    <string name="heroDisplay_deleteHero">Borrar héroe</string>
    <string name="LoremIpsum">Example text here</string>
    <string name="atention">Atención</string>
    <string name="confirmation_erase">¿Seguro que quieres borrar este elemento?</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="intent_idName">ID</string>
    <string name="search">Search</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_final">Fecha final</string>
    <string name="filtrar_por_fecha">Filtrar</string>
    <string name="clear">Clear</string>
    <string name="error_emptyDate">Introduce fechas para filtrar</string>
    <string name="message_undo">¿Deshacer borrar?</string>
    <string name="UNDO">UNDO</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="dateAppend">00:00</string>
    <string name="jsonName">marvel.json</string>
    <string name="datePlaceHolder">%1$d / %2$d / %3$d</string>
    <string name="datePlaceHolderMonthCorrection">%1$d / 0%2$d / %3$d</string>
    <string name="datePlaceHolderDayCorrection">0%1$d / %2$d / %3$d</string>
    <string name="datePlaceHolderDayMonthCorrection">0%1$d / 0%2$d / %3$d</string>
</resources>